baseline/policies/templates/require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requireresourcelimits
  annotations:
    description: "Every container must set CPU and memory limits to enable bin-packing and prevent noisy-neighbour issues."
spec:
  crd:
    spec:
      names:
        kind: RequireResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requireresourcelimits

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.cpu
          msg := sprintf("Container '%v' must have a CPU limit. Add resources.limits.cpu.", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits.memory
          msg := sprintf("Container '%v' must have a memory limit. Add resources.limits.memory.", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not container.resources.limits.cpu
          msg := sprintf("initContainer '%v' must have a CPU limit.", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not container.resources.limits.memory
          msg := sprintf("initContainer '%v' must have a memory limit.", [container.name])
        }
